unpackaged/main/default/objects/Tax_Type_Configuration__mdt/Tax_Type_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Tax Type Configuration</label>
    <pluralLabel>Tax Type Configurations</pluralLabel>
</CustomObject>