unpackaged/main/default/objects/Tax_Type_Configuration__mdt/fields/Amount_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Amount_Field_API_Name__c</fullName>
    <label>Amount Field API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>