unpackaged/main/default/objects/Tax_Type_Configuration__mdt/fields/Pattern_Match__c.field-meta.xml
<CustomField>
    <fullName>Pattern_Match__c</fullName>
    <label>Pattern Match</label>
    <length>50</length>
    <type>Text</type>
</CustomField>