unpackaged/main/default/objects/Tax_Type_Configuration__mdt/fields/Rate_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Rate_Field_API_Name__c</fullName>
    <label>Rate Field API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>