unpackaged/main/default/objects/Tax_Type_Configuration__mdt/fields/Tax_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_Type__c</fullName>
    <label>Tax Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>